End of Lesson 9

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Task 3: Add in link to stylesheet script/index.css -->
 	<link href="script/index.css" rel="stylesheet" />	
 	<!-- Challenge: Add in icon img/favicon-bbcc.png -->
-	<link href="/img/favicon-bbcc.png" rel="icon" />	
+	<link href="/img/King Porker 2.png" rel="icon" />	
 </head>
 <body class="bg-secondary bg-opacity-10" style="min-width:320px">
 	<header>
@@ -20,7 +20,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
 					<img src="img/logo-bbcc.png" alt="logo" class="d-inline-block" style="max-height:3rem">
-					<span class="d-none d-sm-inline-block align-middle">Byte Buster<small class="d-block lh-xs fs-7">Coding Club</small></span>
+					<span class="d-none d-sm-inline-block align-middle">King Porker<small class="d-block lh-xs fs-7">Primary School</small></span>
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navlinks"><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navlinks">
