--- a/memberspotlight.html
+++ b/memberspotlight.html
@@ -8,15 +8,15 @@
 	<script src="script/bootstrap.js"></script>
 	<link href="script/bootstrap.css" rel="stylesheet" />
 	<link href="script/memberspotlight.css" rel="stylesheet" />
-	<link href="img/favicon-bbcc.png" rel="icon" />
+	<link href="img/King Porker 2.png" rel="icon" />
 </head>
 <body class="bg-secondary bg-opacity-10" style="min-width:320px">
 	<header>
 		<nav class="navbar navbar-dark navbar-expand-lg bg-primary">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
-					<img src="img/logo-bbcc.png" alt="logo" class="d-inline-block" style="max-height:3rem">
-					<span class="d-none d-sm-inline-block align-middle">Byte Buster<small class="d-block lh-xs fs-7">Coding Club</small></span>
+					<img src="img/King Porker 2.png" alt="logo" class="d-inline-block" style="max-height:3rem">
+					<span class="d-none d-sm-inline-block align-middle">King Porker<small class="d-block lh-xs fs-7">Primary School</small></span>
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navlinks"><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navlinks">
@@ -50,51 +50,54 @@
 		<div class="bg-light bg-opacity-25">
 			<!-- Insert necessary top and bottom padding -->
 			<div class="container">
-				<div class="align-items-center">
+				<div class="row align-items-center">
 					<!-- Fill in the class name -->
-					<div class="align-self-start">
+					<div class="col-6 align-self-start">
 						<div class="card bg-transparent border-dark p-3 text-center m-3">
-							<div>
+							<div class="">
 								<!-- Add in the "src" of the image. image is called: "clubmember.png", located in the "img" folder -->
-								<img class="w-100 rounded-circle mx-auto" alt="club member" decoding="async" loading="lazy">
+								<img class="w-80 rounded-circle mx-auto" alt="club member" decoding="async" loading="lazy" src="img/Aidan Sha.png">
 							</div>
-							<p class="h5 pt-3">Dave</p>
+							<p class="h5 pt-3">Aidan</p>
 							<p class="h6 mt-n2 fw-normal fst-italic">"Bug Buster"</p>
-							<p class="lh-sm">Our fearless leader is a coding genius who has a knack for fixing even the trickiest bugs.</p>
+							<p class="lh-sm">Our fearless leader is a genius who has a knack for ribbiting.</p>
 						</div>
 					</div>
 					<!-- Fill in the class name -->
-					<div class="">
-						<!-- Fill in the class name -->
-						<!-- Create a heading tag for "About Section" -->
-						About Dave
-						<!-- End of heading tag -->
-						<!-- Create a Paragraph Tag with class name that emphasizes the paragraph & Padding as desire so there is spacing before next Paragraph -->
-						Dave is a vibrant and enthusiastic student who is an active member of the school coding club. His passion for programming and problem-solving is evident in everything he does. He is known for his exceptional coding skills and has a deep understanding of various programming languages.
-						<!-- End of Paragraph Tag -->
-						<!-- Create a heading tag for Favorite Programming Language -->
-						Favorite Programming Language: Python
-						<!-- End of Heading Tag -->
-						<!-- Create a Paragraph Tag with class name that emphasizes the paragraph & Padding  as desire so there is spacing before next Paragraph -->
-						Dave's favorite programming language is Python. He enjoys its simplicity, readability, and the vast array of libraries and frameworks available for various purposes. Python's versatility allows Dave to tackle a wide range of projects, from web development to data analysis and machine learning.
-						<!-- End of Paragraph Tag -->
-						<!-- Create a heading tag for Project Experience -->
-						Project Experience
-						<!-- End of Heading Tag -->
-						<!-- Create a Paragraph Tag with class name that emphasizes the paragraph -->
-						Dave has been involved in numerous successful coding projects within the coding club. One notable project he led was the development of a web application for tracking and managing student assignments and grades. The application streamlined the workflow for teachers and students, providing a user-friendly interface for accessing and submitting assignments, and generating automated grade reports. The project received high praise from both teachers and students, significantly improving efficiency in the school's academic processes.
-						<!-- End of Paragraph Tag -->
+					<div class="col-6">
+
+						<h3>About Aidan</h3>
+						<p>Aidan is a vibrant and enthusiastic student who is an active member of the school coding club. His passion is ribbiting and performing in front of an audience. Ms Celeste, being his geography teacher, appreciates him and he could have coding expertise with her guidance.</p>
+						<h3>Favorite Programming Language: Python</h3>
+						<p>Aidan's favorite programming language is Python. He enjoys its simplicity, readability, and the vast array of libraries and frameworks available for various purposes. Python's versatility allows Dave to tackle a wide range of projects, from web development to data analysis and machine learning.</p>
+						<h3>Project Experience</h3>
+						<p>Aidan has been successful in his work. He scored good grades for maths and English, earning high praise from Ms Tracie. Ms Tracie encourages his juices of creativity.</p>
+
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<!--
-		Let's create for our remaining 3 team members!
-
-		1. Jennie
-		About Jennie
-							Jennie is an enthusiastic and talented student who has found her passion for coding within the school's coding club. Despite her artistic background, she has developed a strong interest in programming and has quickly become a valuable member of the club.
+		<div class="bg-light bg-opacity-25">
+			<!-- Insert necessary top and bottom padding -->
+			<div class="container">
+				<div class="row align-items-center">
+					<!-- Fill in the class name -->
+					<div class="col-7 align-self-start">
+						<div class="col-card bg-transparent border-dark p-3 text-center m-3">
+							<div class="">
+								<!-- Add in the "src" of the image. image is called: "clubmember.png", located in the "img" folder -->
+								<img class="w-80 rounded-circle mx-auto" alt="club member" decoding="async" loading="lazy" src="img/clubmember4.png">
+							</div>
+							<p class="h5 pt-3">Jennie</p>
+							<p class="h6 mt-n2 fw-normal fst-italic">"Java Jenius"</p>
+							<p class="lh-sm">Our smart K-pop idol balancing her dance expertise with technical expertise.</p>
+						</div>
+					</div>
+					<!-- Fill in the class name -->
+					<div class="col-5">
+						<h3>About Jennie</h3>
+						<p>Jennie is an enthusiastic and talented student who has found her passion on the arts. Her voice, ever so melodious, managed to woo the audience to listen to her captivating music. However, her Java skills are so strong, you may be wondering, how is she gonna cope with academy. The thing is, she scored good for her English, Maths, and Geography, scoring 75, 80, and 72 respectively. However, she sucks in Science, pulling off a 52/100.</p> 
 
 		Favorite Programming Language: JavaScript
 							Jennie's favorite programming language is JavaScript. She appreciates its versatility and its ability to create interactive and dynamic web applications. JavaScript's wide adoption and extensive ecosystem make it a go-to choice for Jennie's projects, enabling her to bring her ideas to life on the web.
@@ -103,15 +106,15 @@
 							Jennie has successfully completed various coding projects as part of the coding club. One notable project she contributed to was the development of a mobile app for a local charity organization. The app aimed to streamline donation processes and raise awareness about the organization's cause. Jennie's expertise in mobile app development and her ability to create intuitive user interfaces greatly contributed to the app's success, resulting in increased engagement and support for the charity.
 
 
-		2. Charlie
-		About Charlie
-						 Charlie is a dedicated and resourceful student who has found his calling within the school's coding club. He possesses a deep passion for programming and a natural talent for problem-solving, making him an invaluable member of the club.
+		2. Ethan Tian
+		About Ethan Tian
+						 Ethan Tian is a dedicated and resourceful student who has found his calling within the school's coding club. He possesses a deep passion for programming and a natural talent for problem-solving, making him an invaluable member of the club.
 
 		Favorite Programming Language: C#
-							 Charlie's favorite programming language is C#. He appreciates its strong object-oriented capabilities and its application in developing robust desktop and web applications. C#'s integration with the Microsoft .NET framework enables Charlie to build scalable and efficient software solutions.
+							 Ethan Tian's favorite programming language is C#. He appreciates its strong object-oriented capabilities and its application in developing robust desktop and web applications. C#'s integration with the Microsoft .NET framework enables Ethan Tian to build scalable and efficient software solutions.
 
 		Project Experience
-						 Charlie has been involved in various coding projects that showcase his skills and creativity. One notable project he contributed to was the development of a virtual reality game that aimed to simulate historical events. Charlie's expertise in game development and his attention to detail were instrumental in creating an immersive and engaging experience for users, allowing them to explore different time periods and learn through interactive gameplay.
+						 Ethan Tian has been involved in various coding projects that showcase his skills and creativity. One notable project he contributed to was the development of a virtual reality game that aimed to simulate historical events. Ethan Tian's expertise in game development and his attention to detail were instrumental in creating an immersive and engaging experience for users, allowing them to explore different time periods and learn through interactive gameplay.
 
 		3. Sarah
 		About Sarah
