Start of Lesson 11

--- a/events.html
+++ b/events.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Byte Buster Coding Club</title>
+  <title>King Porker Primary School</title>
   <script src="script/jquery.min.js"></script>
   <script src="script/bootstrap.js"></script>
   <link href="script/bootstrap.css" rel="stylesheet" />
   <link href="script/events.css" rel="stylesheet" />
-  <link href="img/favicon-bbcc.png" rel="icon" />
+  <link href="img/King Porker 2.png" rel="icon" />
 </head>
 <body class="bg-secondary bg-opacity-10" style="min-width:320px">
   <header>
     <nav class="navbar navbar-dark navbar-expand-lg bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo-bbcc.png" alt="logo" class="d-inline-block" style="max-height:3rem">
-          <span class="d-none d-sm-inline-block align-middle">Byte Buster<small class="d-block lh-xs fs-7">Coding Club</small></span>
+          <img src="img/King Porker 2.png" alt="logo" class="d-inline-block" style="max-height:3rem">
+          <span class="d-none d-sm-inline-block align-middle">King Porker<small class="d-block lh-xs fs-7">Primary School</small></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navlinks"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navlinks">
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="aboutus.html">Abouts Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
             <li class="nav-item"><a class="nav-link" href="memberspotlight.html">Members Spotlight</a></li>
             <li class="nav-item"><a class="nav-link active" href="events.html">Events</a></li>
             <li class="nav-item"><a class="nav-link" href="projects.html">Past Projects</a></li>
@@ -43,30 +43,42 @@
     <!-- Leading Text -->
     <div class="py-3 bg-success bg-opacity-25">
       <div class="container">
-        <p>Welcome to our Event Center, the hub of all Byte Busters' excitement! We've got coding jams, hackathons, webinars, and more. Check out our upcoming events and recaps of our past ones.</p>
+        <p>Welcome to our Event Center, the hub of all King Porkers' excitement! We've got coding jams, hackathons, webinars, and more. Check out our upcoming events and recaps of our past ones.</p>
       </div>
     </div>
     <!-- Key section -->
     <div class="container py-3 pb-4">
       <h3 class="h4 pb-3">Upcoming Events</h3>
-
-      <!-- Add the class needed to make, A striped table, A table with borders & A different shade of colour on hover -->
-      <table class="table table-sm">
-        <!-- Record 1 Details
-              2 Sep 2023
-              12 pm, Singapore Time
-              CodeJam - Gear up for an exhilarating 48-hour coding competition. Are you up for the challenge?
-        -->
-        <!-- Record 2 Details
-              9 Sep 2023
-              8 pm, Singapore Time
-              Game Night - Time to unwind with a fun-filled night of multiplayer games. Can you beat the reigning champ?
-        -->
-        <!-- Record 3 Details
-              23 Sep 2023
-              5 pm, Singapore Time
-              Tech Company Networking - We receive a valuable opportunity to network with individual from top tech companies which will allow our members to exchange ideas, knowledge and gain insights on what to expect upon graduation!
-        -->
+      <table class="table table-sm table-hover table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>Event</th>
+            <th>Date</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><h6>Primary 7 Camp</h6>
+              Gear up for a challenge for life readiness, for we can camp overnight and have fun exploring the different cultures of Asia. Are you ready for the challenge?
+              <p class="text-right">
+                <button class="btn btn-primary">Must attend</button>
+              </p>
+            <td>15-17 August 2024</td>
+            <td>Singapore Time - 7:30 AM - 2:00 PM on 15 August, 7:30 AM on 16 August - 10:30 AM on 17 August</td>
+          </tr>
+          
+          <tr>
+            <td><h6>Seminar held</h6>
+              Not for access to students except if given special permission. You can ask the teacher for permission to debate between Donald Trump and Kamala Harris and inflation.
+              <p class="text-right">
+                <button class="btn btn-warning">Only allow 2 more students in, so register before it is full!</button>
+              </p>
+            <td>1 August - 5 November 2024</td>
+            <td>Singapore Time - Depends</td>
+          </tr>
+          
+        </tbody>
       </table>
 
       <!-- Create a second table for past events -->
