--- a/memberspotlight.html
+++ b/memberspotlight.html
@@ -67,48 +67,58 @@
 					<div class="col-6">
 
 						<h3>About Aidan</h3>
-						<p>Aidan is a vibrant and enthusiastic student who is an active member of the school coding club. His passion is ribbiting and performing in front of an audience. Ms Celeste, being his geography teacher, appreciates him and he could have coding expertise with her guidance.</p>
-						<h3>Favorite Programming Language: Python</h3>
-						<p>Aidan's favorite programming language is Python. He enjoys its simplicity, readability, and the vast array of libraries and frameworks available for various purposes. Python's versatility allows Dave to tackle a wide range of projects, from web development to data analysis and machine learning.</p>
+						<p>Aidan is a vibrant and enthusiastic student who is an active member of the school coding club. His passion is ribbiting and performing in front of an audience. Recently, he performed the play 'Bawang Merah Bawang Putih' and taught the audience that kindness and humility are always rewarded in the end.</p>
+						<h3>Favourite programming Language: Python</h3>
+						<p>Aidan's favourite programming language is Python. He enjoys its simplicity, readability, and the vast array of libraries and frameworks available for various purposes. Python's versatility allows Aidan to tackle a wide range of projects, from web development to data analysis and machine learning.</p>
 						<h3>Project Experience</h3>
-						<p>Aidan has been successful in his work. He scored good grades for maths and English, earning high praise from Ms Tracie. Ms Tracie encourages his juices of creativity.</p>
+						<p>Aidan has been successful in his work. He scored good grades for maths and English, earning high praise from Ms Tracie. Ms Tracie encourages his juices of creativity to come alive.</p>
 
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="bg-light bg-opacity-25">
-			<!-- Insert necessary top and bottom padding -->
+		<div class="bg-light bg-opacity-25"></div>
+
 			<div class="container">
 				<div class="row align-items-center">
-					<!-- Fill in the class name -->
-					<div class="col-7 align-self-start">
-						<div class="col-card bg-transparent border-dark p-3 text-center m-3">
+					<div class="col-6 align-self-start">
+						<div class="card bg-transparent border-dark p-3 text-center m-3">
 							<div class="">
 								<!-- Add in the "src" of the image. image is called: "clubmember.png", located in the "img" folder -->
 								<img class="w-80 rounded-circle mx-auto" alt="club member" decoding="async" loading="lazy" src="img/clubmember4.png">
 							</div>
-							<p class="h5 pt-3">Jennie</p>
-							<p class="h6 mt-n2 fw-normal fst-italic">"Java Jenius"</p>
-							<p class="lh-sm">Our smart K-pop idol balancing her dance expertise with technical expertise.</p>
-						</div>
-					</div>
-					<!-- Fill in the class name -->
-					<div class="col-7">
-						<h3>About Jennie</h3>
-						<p>Jennie is an enthusiastic and talented student who has found her passion on the arts. Her voice, ever so melodious, managed to woo the audience to listen to her captivating music. However, her Java skills are so strong, you may be wondering, how is she gonna cope with academy. The thing is, she scored good for her English, Maths, and Geography, scoring 75, 80, and 72 respectively. However, she sucks in Science, pulling off a 52/100.</p> 
+							</div>
+						    <p class="h5 pt-3">Jennie</p>
+						    <p class="h6 mt-n2 fw-normal fst-italic">"Java Jenius"</p>
+						    <p class="lh-sm">Our smart K-pop idol balancing her dance expertise with technical expertise.</p>
+					        <div class="">
 
-		Favorite Programming Language: JavaScript
-							Jennie's favorite programming language is JavaScript. She appreciates its versatility and its ability to create interactive and dynamic web applications. JavaScript's wide adoption and extensive ecosystem make it a go-to choice for Jennie's projects, enabling her to bring her ideas to life on the web.
+                            <h3>About Jennie</h3>
+					        <p>Jennie is an enthusiastic and talented student who has found her passion on the arts. Her voice, ever so melodious, managed to woo the audience to listen to her captivating music. However, her Java skills are so strong, you may be wondering, how is she gonna cope with academy. The thing is, she scored good for her English, Maths, and Geography, scoring 75, 80, and 72 respectively. However, she sucks in Science, pulling off a 52/100.</p> 
+                            <h3>Favorite Programming Language: JavaScript</h3>
+					        <p>Jennie's favourite coding language is JavaScript. Though she thrives in creating beautiful websites, she also works hard to make her voice as beautiful as her website, which earned her a lot of respect from her peers.</p>
+                            <h3>Project Experience</h3>
+						    <p>Jennie has successfully completed various coding projects as part of the coding club. One notable project she contributed to was the development of a mobile app for a local charity organization. The app aimed to streamline donation processes and raise awareness about the organization's cause. Jennie's expertise in mobile app development and her ability to create intuitive user interfaces greatly contributed to the app's success, resulting in increased engagement and support for the charity.</p>
 
-		Project Experience
-							Jennie has successfully completed various coding projects as part of the coding club. One notable project she contributed to was the development of a mobile app for a local charity organization. The app aimed to streamline donation processes and raise awareness about the organization's cause. Jennie's expertise in mobile app development and her ability to create intuitive user interfaces greatly contributed to the app's success, resulting in increased engagement and support for the charity.
+						</div></div></div></div>
+<div>
+	    <div class="container">
+		    <div class="row align-items-center">
+			    <div class="col-6 align-self-start">
+				    <div class="card bg-transparent border-dark p-3 text-center m-3">
+					    <div class="">
+						    <img class="w-80 rounded-circle mx-auto" alt="club member" decoding="async" loading="lazy" src="img/clubmember4.png">
+					    </div>
+					    </div>
+					    <p class="h5 pt-3">Ethan Tian 2</p>
+					    <p class="h6 mt-n2 fw-normal fst-italic">"Java Jenius"</p>
+					    <p class="lh-sm">Our smart K-pop idol balancing her dance expertise with technical expertise.</p>
+					    <div class="">
 
-
-		2. Ethan Tian
-		About Ethan Tian
-						 Ethan Tian is a dedicated and resourceful student who has found his calling within the school's coding club. He possesses a deep passion for programming and a natural talent for problem-solving, making him an invaluable member of the club.
+		                2. Ethan Tian 2
+		                About Ethan Tian 2
+						Ethan Tian is a dedicated and resourceful student who has found his calling within the school's coding club. He possesses a deep passion for programming and a natural talent for problem-solving, making him an invaluable member of the club.
 
 		Favorite Programming Language: C#
 							 Ethan Tian's favorite programming language is C#. He appreciates its strong object-oriented capabilities and its application in developing robust desktop and web applications. C#'s integration with the Microsoft .NET framework enables Ethan Tian to build scalable and efficient software solutions.
@@ -125,8 +135,8 @@
 
 		Project Experience
 						 Sarah has contributed to numerous coding projects that demonstrate her proficiency in app development. One notable project she worked on was the creation of a fitness tracking app that utilized machine learning algorithms to provide personalized workout recommendations. Sarah's expertise in mobile app development and her knowledge of machine learning algorithms enabled her to deliver an app that helped users achieve their fitness goals effectively and efficiently.
-				-->
-
+				
+			</div>
 	</article>
 	<!-- End of coding region -->
 	<footer class="bg-dark text-light">
