--- a/practice.html
+++ b/practice.html
@@ -4,8 +4,69 @@
   	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
     <link href="/script/practice.css" rel="stylesheet" />
+    <link href="/script/bootstrap.css" rel="stylesheet"/>
   </head>
   <body>
+    <!-- Lesson 10 -->
+    <table class="table table-striped table-bordered table-hover">
+      <thead>
+       <tr>
+        <th>Subject Code</th>
+        <th>Subject Name</th>
+        <th>Grade</th>
+        <th>Status</th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr>
+        <td>1184</td>
+        <td>English Language</td>
+        <td>C5</td>
+        <td><span class="btn btn-warning">Borderline Fail</td>
+       </tr>
+       <tr>
+        <td>4052</td>
+        <td>Mathematics</td>
+        <td>A2</td>
+        <td><span class="btn btn-success">Pass</td>
+       </tr>
+       <tr>
+        <td>4156</td>
+        <td>Science</td>
+        <td>B3</td>
+        <td><span class="btn btn-success">Pass</td>
+       </tr>
+       <tr>
+        <td>2279</td>
+        <td>Geography</td>
+        <td>A2</td>
+        <td><span class="btn btn-success">Pass</td>
+       </tr>
+       <tr>
+        <td>2174</td>
+        <td>History</td>
+        <td>A1</td>
+        <td><span class="btn btn-success">Big Win</td>
+       </tr>
+       <tr>
+        <td>6097</td>
+        <td>Food and Consumer Education</td>
+        <td>A1</td>
+        <td><span class="btn btn-success">Pass</td>
+       </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="3">Ok, this is the end of my results. Sorry for doing badly.</th>
+        </tr>
+        <tr>
+          <td colspan="3">Irrelevant</td>
+           <p class="text-right">
+           <button type="button" class="btn btn-success">Click here for your free robux.</button>
+           </p>
+        </tr>
+      </tfoot>
+    </table>
     <!-- lesson 4 -->
     <h1>
       <a href="http://www.google.com.sg" target="_self">Google</a>
