--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width"/>
-	<!-- Take note that <head> section is different from header or <h1> -->
-	<title>Byte Buster Coding Club</title>
+	<title>King Porker Primary School</title>
 	<script src="script/jquery.min.js"></script>
-	<!-- Task 2: Add in script for script/bootstrap.js here -->
 	<script src="script/bootstrap.js"></script>
 	<link href="script/bootstrap.css" rel="stylesheet" />	
-	<!-- Task 3: Add in link to stylesheet script/index.css -->
 	<link href="script/index.css" rel="stylesheet" />	
-	<!-- Challenge: Add in icon img/favicon-bbcc.png -->
 	<link href="/img/King Porker 2.png" rel="icon" />	
 </head>
 <body class="bg-secondary bg-opacity-10" style="min-width:320px">
@@ -19,7 +15,7 @@
 		<nav class="navbar navbar-dark navbar-expand-lg bg-primary">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
-					<img src="img/logo-bbcc.png" alt="logo" class="d-inline-block" style="max-height:3rem">
+					<img src="img/King Porker 2.png" alt="logo" class="d-inline-block" style="max-height:3rem">
 					<span class="d-none d-sm-inline-block align-middle">King Porker<small class="d-block lh-xs fs-7">Primary School</small></span>
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navlinks"><span class="navbar-toggler-icon"></span></button>
@@ -28,30 +24,19 @@
 						<li class="nav-item"><a class="nav-link" href="practice.html">Practice</a></li>
 						<li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
 						<li class="nav-item"><a class="nav-link" href="memberspotlight.html">Members Spotlight</a></li>
-			<!-- add list item for events.html --> 
 						<li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
-            <!-- add list item for projects.html --> 
 						<li class="nav-item"><a class="nav-link" href="projects.html">Past Projects</a></li>
-            <!-- add list item for contacts.html --> 
 						<li class="nav-item"><a class="nav-link" href="contacts.html">Contact Us</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-	<!-- Here the main container where students should code -->
 	<article class="min-vh-100">
-		<!-- Start Banner Region -->
 		<div id="banner"></div>
-    <!-- End Banner Region -->
-		<!-- Start Page Header -->
 		<div class="container pt-4 py-3">
-      <!-- (Page Header Task 1) Add a <h1> text here to add a Page Header
-           There are <h1> to <h6> for different sizes -->
-      <h1 class="text-center fw-bold display-4">Welcome to Byte Buster Coding Club</h1>
-      <!-- (Page Header Task 2) Add a <h2> text to add a subtext or a tagline
-          e.g. "Where we code, create and conquer the digital world" -->
-	  <h2 class="text-center">Where we code, create and conquer the digital world</h2>		
+        <h1 class="text-center fw-bold display-4">Welcome to King Porker Primary School</h1>
+	    <h2 class="text-center">Where we code, create and conquer the digital world</h2>		
       <!-- BONUS: Add a css class attribute attribute to make it center by adding text-center --> 
 		</div>
     <!-- End Page Header -->
@@ -59,19 +44,16 @@
 		<div class="py-3 bg-success bg-opacity-25">
 			<div class="container">
         <!-- (Leading Text 1) Add a <h3> class for the Welcome Note -->
-				<h3>Welcome to Byte Busters Coding Club</h3>
-        <!-- (Leading Text 2) Add a <p> paragraph with a short introduction -->
-        		<p>
-        Hi there! Welcome to the Byte Busters, the coolest coding club this side of the galaxy. We're a group of tech-savvy teens who love nothing more than cracking code and creating killer websites, apps, and games. If you're a fan of all things digital, you're going to feel right at home here.
-				</p>
+				<h3>Welcome to King Porker Primary School</h3>
+			    <p>Hi there! Welcome to the King Porker Primary School, the coolest coding club this side of the galaxy. We're a group of tech-savvy teens who love nothing more than cracking code and creating killer websites, apps, and games. If you're a fan of all things digital, you're going to feel right at home here.</p>
+
 			</div>
 		</div>
-    <!-- End Leading Text -->
+
 		<div class="container py-3">
 			<h3>News Highlights</h3>
-			<h4>Header Topic</h4>
-			<p></p>
-
+			<h4>Topic 1: A record number of Singaporeans enter JB</h4>
+			<p>It is pleasing to note that more Singaporeans want to go to JB. The high passenger volume suggest that people want to earn money in Singapore so that they can stretch their dollar in Johor Bahru when going shopping, help them retire early with a peace of mind, knowing that they saved enough in Singapore.</p>
 			<h4>Header Topic</h4>
 			<p></p>
 
