--- a/practice.html
+++ b/practice.html
@@ -7,6 +7,50 @@
     <link href="/script/bootstrap.css" rel="stylesheet"/>
   </head>
   <body>
+    <script>
+      console.log("Hello, hello, this is Tony Tan. Please leave a message.")
+      console.warn("This is a website that can get scams easily!")
+      console.error("Sorry, an error has occurred. Try again later.")
+      let SusanCash = 100;
+      let inflation1 = 4;
+      console.log("SusanCash2024 has $" + SusanCash);
+      SusanCash = 100 * 1.04;
+      console.log("SusanCash2025 has $" + SusanCash);
+      let six = 6;
+      let eight = 8;
+      let ten = 10;
+      result = six * eight * ten;
+      console.log(result);
+      let twenty = 20;
+      let five = 5;
+      let two = 2;
+      let seven = 7;
+      result2 = (5 + 20 - 7)/2;
+      console.log(result2);
+      let inflation2 = 2
+      if (inflation2 > 5) {
+        console.log("Economy is being strained by inflation.")
+      }
+      else if (inflation2 > 0.5) {
+        console.log("Economy is doing a good job!")
+      }
+      else {
+        console.log("Economy heading for a recession with a high risk of deflation.")
+      } ;
+      if (50 == "50") {
+        console.log("So weird!");
+      }
+      else {
+        console.log("Python says that it is not equal!");
+      }
+    </script>
+    <form>
+      First Name:
+      <input type="text" id="firstname" name="FirstName" placeholder="example Ms Tracie" />
+      Date of Birth:
+      <input type="date" id="dob" name="dateofbirth" placeholder="" />
+      <button type="submit" class="btn btn-success">Send!</button>
+    </form>
     <!-- Lesson 10 -->
     <table class="table table-striped table-bordered table-hover">
       <thead>
