--- a/practice.html
+++ b/practice.html
@@ -46,10 +46,12 @@
     </script>
     <form>
       First Name:
-      <input type="text" id="firstname" name="FirstName" placeholder="example Ms Tracie" />
+      <input class="form-control" type="text" id="firstname" name="FirstName" placeholder="example Ms Tracie" />
       Date of Birth:
-      <input type="date" id="dob" name="dateofbirth" placeholder="" />
-      <button type="submit" class="btn btn-success">Send!</button>
+      <input class="form-control" type="date" id="dob" name="dateofbirth" placeholder="" />
+      <div class="pt-3 pb-3">
+        <button type="submit" class="btn btn-success">Send!</button>
+      </div>
     </form>
     <!-- Lesson 10 -->
     <table class="table table-striped table-bordered table-hover">
