--- a/practice2.html
+++ b/practice2.html
@@ -37,22 +37,22 @@
             <td><span class="btn btn-danger">Sold out! Come again another time!</td>
          </tr>
            <tr>
-            <td>4156</td>
-            <td>Science</td>
-            <td>B3</td>
-            <td><span class="btn btn-success">Pass</td>
+            <td>Black Gold</td>
+            <td>$22.50/durian</td>
+            <td>Forest City</td>
+            <td><span class="btn btn-success">60 durians available</td>
          </tr>
          <tr>
-          <td>2279</td>
-          <td>Geography</td>
-          <td>A2</td>
-          <td><span class="btn btn-success">Pass</td>
+          <td>Chanee</td>
+          <td>$29-35/durian</td>
+          <td>Bangkok</td>
+          <td><span class="btn btn-primary">Accidental surplus causing deflation</td>
          </tr>
          <tr>
-          <td>2174</td>
-          <td>History</td>
-          <td>A1</td>
-          <td><span class="btn btn-success">Big Win</td>
+          <td>Mao Shan Wang 2</td>
+          <td>$8/kg</td>
+          <td>Iskandar Puteri</td>
+          <td><span class="btn btn-primary">Accidental surplus causing high deflation</td>
          </tr>
          <tr>
           <td>6097</td>
