Let's practice together Lesson 12

--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Byte Buster Coding Club</title>
+	<title>King Porker Primary School</title>
 	<script src="script/jquery.min.js"></script>
 	<script src="script/bootstrap.js"></script>
 	<script src="script/contacts.js"></script>
@@ -17,7 +17,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" href="index.html">
 					<img src="img/logo-bbcc.png" alt="logo" class="d-inline-block" style="max-height:3rem">
-					<span class="d-none d-sm-inline-block align-middle">Byte Buster<small class="d-block lh-xs fs-7">Coding Club</small></span>
+					<span class="d-none d-sm-inline-block align-middle">King Porker<small class="d-block lh-xs fs-7">Primary School</small></span>
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navlinks"><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navlinks">
@@ -50,17 +50,7 @@
 		<!-- Key section -->
 		<form class="container py-3">
 			<div class="row gy-3">
-				<!-- Label: Name*
-						 Text Input field -->
 
-				<!-- Label: Email Address*
-						 Email Input field -->
-
-				<!-- Label: Subject*
-						 Text Input field with placeholder text "Enquiry on how to code"-->
-
-				<!-- Label: Subject*
-						 Textarea field with the row attribute of value 5-->
 			</div>
 			<!-- Code a blue "Send" button inside a <div> according to the criteria stated -->
 		</form>
