--- a/practice.html
+++ b/practice.html
@@ -44,15 +44,17 @@
         console.log("Python says that it is not equal!");
       }
     </script>
+    <div class="container">
     <form>
       First Name:
       <input class="form-control" type="text" id="firstname" name="FirstName" placeholder="example Ms Tracie" />
       Date of Birth:
       <input class="form-control" type="date" id="dob" name="dateofbirth" placeholder="" />
+      <textarea class="form-control type="text" rows="5" placeholder="Type your life story here."></textarea>
       <div class="pt-3 pb-3">
         <button type="submit" class="btn btn-success">Send!</button>
       </div>
-    </form>
+    </form></div>
     <!-- Lesson 10 -->
     <table class="table table-striped table-bordered table-hover">
       <thead>
