--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 					</div>
 					<div class="tab-pane fade show active" id="canvas">
 						<p style="color: hotpink; font-size: 20px; text-align: justify;">This is a JavaScript Java.</p>
-						<iframe width="500" height="500" src="https://www.youtube.com/watch?v=lwbZLLydzio&ab_channel=1M65"></iframe>
+						<iframe width="500" height="500" src="https://www.youtube.com/watch?v=Zm0_Js9EeTQ"></iframe>
 					</div>
 				</div>
 			</div>
