small change (why not a challenge?)

--- a/practice2.html
+++ b/practice2.html
@@ -69,5 +69,9 @@
           </tr>
         </tfoot>
       </table>
+      <b>My Item Wishlist for 2024</b>
+      <li>I want help in more charity organisations during the holidays.</li>
+      <li>I want to go to City Hall/Bugis during the holidays.</li>
+      <li>I want to go to Sengkang during the holidays or helping children with revision.</li>
     </body>
 </html>
